Adding the Logout

--- a/Project_CuisineDelight/Project_CuisineDelight/Web.config
+++ b/Project_CuisineDelight/Project_CuisineDelight/Web.config
@@ -4,10 +4,19 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <configSections>
+
+
+	<configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+	<system.net>
+		<mailSettings>
+			<smtp deliveryMethod="SpecifiedPickupDirectory" from="CuisineDelight Accounts &lt;CuisineDelightAcc@CuisineDelight.com&gt;">
+				<specifiedPickupDirectory pickupDirectoryLocation="C:\TempMail" />
+			</smtp>
+		</mailSettings>
+	</system.net>
   <system.web>
 	  <authentication mode="Forms">
 		  <forms loginUrl="~/Login.aspx"/>
