--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 /Project_CuisineDelight/.vs/Project_CuisineDelight/v17/.suo
+/Project_CuisineDelight/Project_CuisineDelight/obj/Debug/Project_CuisineDelight.csproj.AssemblyReference.cache
