--- a/Project_CuisineDelight/Project_CuisineDelight/bin/Project_CuisineDelight.dll.config
+++ b/Project_CuisineDelight/Project_CuisineDelight/bin/Project_CuisineDelight.dll.config
@@ -87,6 +87,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-Project_CuisineDelight-20220308233529;Integrated Security=SSPI" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-Quiz1-20220217224615;Integrated Security=True" />
   </connectionStrings>
 </configuration>
