--- a/Project_CuisineDelight/Project_CuisineDelight/bin/Project_CuisineDelight.dll.config
+++ b/Project_CuisineDelight/Project_CuisineDelight/bin/Project_CuisineDelight.dll.config
@@ -41,7 +41,7 @@
         <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="8" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
       </providers>
     </membership>
-    <roleManager defaultProvider="DefaultRoleProvider">
+    <roleManager defaultProvider="DefaultRoleProvider" enabled="true">
       <providers>
         <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
@@ -87,6 +87,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-Quiz1-20220217224615;Integrated Security=True" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-1O3UVU6\SQLEXPRESS;Initial Catalog=ASP-PROJECT-CUISINE-DELIGHT;Integrated Security=True" />
   </connectionStrings>
 </configuration>
