--- a/Project_CuisineDelight/Project_CuisineDelight/Web.config
+++ b/Project_CuisineDelight/Project_CuisineDelight/Web.config
@@ -87,6 +87,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-1O3UVU6\SQLEXPRESS;Initial Catalog=ASP-PROJECT-CUISINE-DELIGHT;Integrated Security=True" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ASP-PROJECT-CUISINE-DELIGHT;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
 </configuration>
