--- a/Project_CuisineDelight/Project_CuisineDelight/Project_CuisineDelight.csproj
+++ b/Project_CuisineDelight/Project_CuisineDelight/Project_CuisineDelight.csproj
@@ -115,6 +115,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="Admin\Dashboard.aspx" />
+    <Content Include="Admin\ManageCaterer.aspx" />
+    <Content Include="Admin\Report.aspx" />
     <Content Include="App_Data\SignupConfirmation.txt" />
     <Content Include="Caterer.aspx" />
     <Content Include="CatererFolder\AddingPackage.aspx" />
@@ -200,6 +203,27 @@
     </Compile>
     <Compile Include="About.aspx.designer.cs">
       <DependentUpon>About.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Dashboard.aspx.cs">
+      <DependentUpon>Dashboard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Dashboard.aspx.designer.cs">
+      <DependentUpon>Dashboard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\ManageCaterer.aspx.cs">
+      <DependentUpon>ManageCaterer.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\ManageCaterer.aspx.designer.cs">
+      <DependentUpon>ManageCaterer.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Report.aspx.cs">
+      <DependentUpon>Report.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Report.aspx.designer.cs">
+      <DependentUpon>Report.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
