--- a/Project_CuisineDelight/Project_CuisineDelight/Project_CuisineDelight.csproj
+++ b/Project_CuisineDelight/Project_CuisineDelight/Project_CuisineDelight.csproj
@@ -150,6 +150,8 @@
     <Content Include="Login.aspx" />
     <Content Include="Master\FrontEnd.Master" />
     <Content Include="Profile Pictures\istockphoto-1293539824-170667a.jpg" />
+    <Content Include="SignupCaterer.aspx" />
+    <Content Include="SignupSelectionAsCustomerORCaterer.aspx" />
     <Content Include="WebForm1.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -333,6 +335,20 @@
     </Compile>
     <Compile Include="SignUp.aspx.designer.cs">
       <DependentUpon>SignUp.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SignupCaterer.aspx.cs">
+      <DependentUpon>SignupCaterer.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SignupCaterer.aspx.designer.cs">
+      <DependentUpon>SignupCaterer.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SignupSelectionAsCustomerORCaterer.aspx.cs">
+      <DependentUpon>SignupSelectionAsCustomerORCaterer.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SignupSelectionAsCustomerORCaterer.aspx.designer.cs">
+      <DependentUpon>SignupSelectionAsCustomerORCaterer.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
