--- a/Project_CuisineDelight/Project_CuisineDelight/Project_CuisineDelight.csproj
+++ b/Project_CuisineDelight/Project_CuisineDelight/Project_CuisineDelight.csproj
@@ -155,6 +155,7 @@
     <Content Include="Login.aspx" />
     <Content Include="Master\FrontEnd.Master" />
     <Content Include="Profile Pictures\istockphoto-1293539824-170667a.jpg" />
+    <Content Include="SearchResults.aspx" />
     <Content Include="SignupCaterer.aspx" />
     <Content Include="SignupSelectionAsCustomerORCaterer.aspx" />
     <Content Include="UserForgotPassword.aspx" />
@@ -363,6 +364,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchResults.aspx.cs">
+      <DependentUpon>SearchResults.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SearchResults.aspx.designer.cs">
+      <DependentUpon>SearchResults.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ShoppingCart.aspx.cs">
       <DependentUpon>ShoppingCart.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
