--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Project_CuisineDelight/.vs/Project_CuisineDelight/v17/.suo
 /Project_CuisineDelight/Project_CuisineDelight/obj/Debug/Project_CuisineDelight.csproj.AssemblyReference.cache
 /Project_CuisineDelight/Project_CuisineDelight/obj/Debug/Project_CuisineDelight.csproj.FileListAbsolute.txt
+*.cache
