--- a/Project_CuisineDelight/Project_CuisineDelight/Project_CuisineDelight.csproj
+++ b/Project_CuisineDelight/Project_CuisineDelight/Project_CuisineDelight.csproj
@@ -133,6 +133,7 @@
     <Content Include="CatererFolder\ItemImage\default-placeholder.png" />
     <Content Include="CatererFolder\ListItemOfCaterer.ascx" />
     <Content Include="CatererFolder\ListPackageOfCaterer.ascx" />
+    <Content Include="CatererFolder\Orders.aspx" />
     <Content Include="CatererFolder\WebForm1.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -140,6 +141,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Customer\MyOrders.aspx" />
     <Content Include="Customer\UserProfileForm.ascx" />
     <Content Include="Default.aspx" />
     <Content Include="FAQ.aspx" />
@@ -328,6 +330,13 @@
     <Compile Include="CatererFolder\ListPackageOfCaterer.ascx.designer.cs">
       <DependentUpon>ListPackageOfCaterer.ascx</DependentUpon>
     </Compile>
+    <Compile Include="CatererFolder\Orders.aspx.cs">
+      <DependentUpon>Orders.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CatererFolder\Orders.aspx.designer.cs">
+      <DependentUpon>Orders.aspx</DependentUpon>
+    </Compile>
     <Compile Include="CatererFolder\WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -341,6 +350,13 @@
     </Compile>
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Customer\MyOrders.aspx.cs">
+      <DependentUpon>MyOrders.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Customer\MyOrders.aspx.designer.cs">
+      <DependentUpon>MyOrders.aspx</DependentUpon>
     </Compile>
     <Compile Include="Customer\UserProfileForm.ascx.cs">
       <DependentUpon>UserProfileForm.ascx</DependentUpon>
