--- a/Project_CuisineDelight/Project_CuisineDelight/Web.config
+++ b/Project_CuisineDelight/Project_CuisineDelight/Web.config
@@ -40,7 +40,8 @@
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.8"/>
-    <pages>
+	  <!-- Use theme >> Black or Pink for different background color-->
+	  <pages theme="Black" styleSheetTheme="Black">
       <namespaces>
         <add namespace="System.Web.Optimization" />
       </namespaces>
