--- a/Project_CuisineDelight/Project_CuisineDelight/bin/Project_CuisineDelight.dll.config
+++ b/Project_CuisineDelight/Project_CuisineDelight/bin/Project_CuisineDelight.dll.config
@@ -40,7 +40,8 @@
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.8"/>
-    <pages>
+	  <!-- Use theme >> Black or Pink for different background color-->
+	  <pages theme="Pink" styleSheetTheme="Pink">
       <namespaces>
         <add namespace="System.Web.Optimization" />
       </namespaces>
