--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Project_CuisineDelight/Project_CuisineDelight/obj/Debug/Project_CuisineDelight.csproj.CoreCompileInputs.cache
 /Project_CuisineDelight/Project_CuisineDelight/obj/Debug/Project_CuisineDelight.dll
 /Project_CuisineDelight/Project_CuisineDelight/obj/Debug/Project_CuisineDelight.pdb
+Project_CuisineDelight/Project_CuisineDelight/Project_CuisineDelight.csproj
