Adding data for caterer

--- a/Project_CuisineDelight/Project_CuisineDelight/Project_CuisineDelight.csproj
+++ b/Project_CuisineDelight/Project_CuisineDelight/Project_CuisineDelight.csproj
@@ -632,6 +632,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="CatererFolder\CatererProfileImage\" />
     <Folder Include="CatererFolder\PackageImage\" />
     <Folder Include="Customer\CustomerProfilePicture\" />
   </ItemGroup>
