--- a/Project_CuisineDelight/Project_CuisineDelight/bin/Project_CuisineDelight.dll.config
+++ b/Project_CuisineDelight/Project_CuisineDelight/bin/Project_CuisineDelight.dll.config
@@ -41,7 +41,8 @@
     </compilation>
     <httpRuntime targetFramework="4.8"/>
 	  <!-- Use theme >> Black or Pink for different background color-->
-	  <pages theme="Pink" styleSheetTheme="Pink">
+	  <pages> <!--theme="Black" styleSheetTheme="Black"-->
+		  <!--<pages theme="Black" styleSheetTheme="Black">-->
       <namespaces>
         <add namespace="System.Web.Optimization" />
       </namespaces>
