--- a/Project_CuisineDelight/Project_CuisineDelight/Web.config
+++ b/Project_CuisineDelight/Project_CuisineDelight/Web.config
@@ -40,9 +40,8 @@
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.8"/>
-	  <!-- Use theme >> Black or Pink for different background color-->
-	  <pages> <!--theme="Black" styleSheetTheme="Black"-->
-		  <!--<pages theme="Black" styleSheetTheme="Black">-->
+	  <!-- Use theme >> White or Pink for different background color-->
+	<pages theme="White" styleSheetTheme="White">
       <namespaces>
         <add namespace="System.Web.Optimization" />
       </namespaces>
